--- a/css/style.css
+++ b/css/style.css
@@ -1099,4 +1099,12 @@ h1, h2, h3, h4, h5, p {
     width: 100%;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .animated {
+    transition-property: none !important;
+    transform: none !important;
+    animation: none !important;
+  }
+}
 /*# sourceMappingURL=style.css.map */
