--- a/style.sass
+++ b/style.sass
@@ -871,3 +871,24 @@ h1, h2, h3, h4, h5, p
         .counter-slider
             .slider-item
                 width: 100%
+
+@media only screen and (max-width : 768px)
+	.animated 
+		-o-transition-property: none !important
+		-moz-transition-property: none !important
+		-ms-transition-property: none !important
+		-webkit-transition-property: none !important
+		transition-property: none !important
+		
+		-o-transform: none !important
+		-moz-transform: none !important
+		-ms-transform: none !important
+		-webkit-transform: none !important
+		transform: none !important
+		
+		-webkit-animation: none !important
+		-moz-animation: none !important
+		-o-animation: none !important
+		-ms-animation: none !important
+		animation: none !important
+	
